yaml: wrap meta-xt-rcar-gles_common layer by --GRAPHICS
`meta-xt-rcar-gles_common` layer is required for builds with
GFX only, so it should be wrapped accordingly.

Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar-agl.yaml
+++ b/prod-devel-rcar-agl.yaml
@@ -131,6 +131,7 @@ common_data:
         - "../meta-python2"
         - "../meta-clang"
         - "../meta-xt-rcar/meta-xt-rcar-proprietary"
+        - "../meta-xt-rcar/meta-xt-rcar-gles_common"
 
 components:
   dom0:
@@ -339,7 +340,6 @@ components:
         - "../meta-xt-rcar/meta-xt-rcar-fixups"
         - "../meta-xt-rcar/meta-xt-rcar-driver-domain"
         - "../meta-xt-rcar/meta-xt-rcar-domx"
-        - "../meta-xt-rcar/meta-xt-rcar-gles_common"
         - "../meta-xt-prod-devel-rcar/meta-xt-domx-gen3"
         - "../meta-xt-prod-devel-rcar/meta-xt-prod-devel-rcar-driver-domain"
         - "../meta-xt-prod-devel-rcar/meta-agl-tune"
@@ -377,7 +377,6 @@ components:
         - "../meta-xt-common/meta-xt-domu"
         - "../meta-xt-rcar/meta-xt-rcar-fixups"
         - "../meta-xt-rcar/meta-xt-rcar-domu"
-        - "../meta-xt-rcar/meta-xt-rcar-gles_common"
       build_target: core-image-weston
       target_images:
         - "tmp/deploy/images/%{DOMU_MACHINE}/Image"
@@ -724,10 +723,14 @@ parameters:
             builder:
               conf:
                 - [XT_PREBUILT_GSX_DIR, "%{XT_PREBUILT_GSX_DIR}"]
+              layers:
+                - "../meta-xt-rcar/meta-xt-rcar-gles_common"
           domu:
             builder:
               conf:
                 - [XT_PREBUILT_GSX_DIR, "%{XT_PREBUILT_GSX_DIR}"]
+              layers:
+                - "../meta-xt-rcar/meta-xt-rcar-gles_common"
           doma:
             sources:
               - type: unpack
