--- a/prod-devel-rcar-virtio.yaml
+++ b/prod-devel-rcar-virtio.yaml
@@ -276,7 +276,6 @@ components:
         - "../meta-xt-rcar/meta-xt-rcar-fixups"
         - "../meta-xt-rcar/meta-xt-rcar-driver-domain"
         - "../meta-xt-rcar/meta-xt-rcar-domx"
-        - "../meta-xt-rcar/meta-xt-rcar-gles_common"
         - "../meta-xt-prod-devel-rcar/meta-xt-domx-gen3"
         - "../meta-xt-prod-devel-rcar/meta-xt-prod-devel-rcar-driver-domain"
         - "../meta-xt-prod-devel-rcar/meta-xt-domd-gen3"
@@ -745,6 +744,8 @@ parameters:
             builder:
               conf:
                 - [XT_PREBUILT_GSX_DIR, "%{XT_PREBUILT_GSX_DIR}"]
+              layers:
+                - "../meta-xt-rcar/meta-xt-rcar-gles_common"
 
     "sources":
       default: true
@@ -762,3 +763,4 @@ parameters:
                 - "../meta-python2"
                 - "../meta-clang"
                 - "../meta-xt-rcar/meta-xt-rcar-proprietary"
+                - "../meta-xt-rcar/meta-xt-rcar-gles_common"
