--- a/prod-devel-rcar-agl.yaml
+++ b/prod-devel-rcar-agl.yaml
@@ -55,9 +55,6 @@ common_data:
     # Use hypervisor console on all guests
     - [SERIAL_CONSOLES, "115200;hvc0"]
 
-    # Configure number of supported GPU virtual guests
-    - [XT_PVR_NUM_OSID, "%{XT_PVR_NUM_OSID}"]
-
     # Remove features that we are not using
     - [DISTRO_FEATURES_remove, "x11 gtk gobject-introspection-data wifi nfc bluetooth irda zeroconf 3g sysvinit"]
 
@@ -73,22 +70,6 @@ common_data:
 
     # add the static lib to SDK toolchain
     - [SDKIMAGE_FEATURES_append, " staticdev-pkgs"]
-
-    # Enable Gfx Pkgs
-    - [MACHINE_FEATURES_append, " gsx"]
-    - [MULTI_PROVIDER_WHITELIST_append," virtual/libgl virtual/egl virtual/libgles1 virtual/libgles2"]
-
-    # for Wayland/Weston
-    - [DISTRO_FEATURES_NATIVESDK_append, " wayland"]
-    - [DISTRO_FEATURES_append, " pam"]
-    - [PREFERRED_PROVIDER_virtual/libgles1, ""]
-    - [PREFERRED_PROVIDER_virtual/libgles2, "gles-user-module"]
-    - [PREFERRED_PROVIDER_virtual/egl, "libegl"]
-    - [PREFERRED_PROVIDER_virtual/libgl, ""]
-    - [PREFERRED_PROVIDER_virtual/mesa, ""]
-    - [PREFERRED_PROVIDER_virtual/libgbm, "libgbm"]
-    - [PREFERRED_PROVIDER_libgbm-dev, "libgbm"]
-    - [BBMASK_append, " mesa-gl"]
 
     # Add for gstreamer plugins ugly
     - [LICENSE_FLAGS_WHITELIST, "commercial"]
@@ -109,6 +90,27 @@ common_data:
     # Additional testing and debug tools
     - [IMAGE_INSTALL_append, "expect ltrace strace evtest"]
 
+  gfx_conf: &GFX_CONF
+    # Configure number of supported GPU virtual guests
+    - [XT_PVR_NUM_OSID, "%{XT_PVR_NUM_OSID}"]
+
+    # for Wayland/Weston
+    - [DISTRO_FEATURES_NATIVESDK:append, " wayland"]
+    - [DISTRO_FEATURES:append, " pam"]
+
+    # Enable Gfx Pkgs
+    - [MACHINE_FEATURES:append, " gsx"]
+    - [BB_MULTI_PROVIDER_ALLOWED:append," virtual/libgl virtual/egl virtual/libgles1 virtual/libgles2"]
+    - [PREFERRED_PROVIDER_virtual/libgles1, ""]
+    - [PREFERRED_PROVIDER_virtual/libgles2, "gles-user-module"]
+    - [PREFERRED_PROVIDER_virtual/libgles3, "gles-user-module"]
+    - [PREFERRED_PROVIDER_virtual/egl, "libegl"]
+    - [PREFERRED_PROVIDER_virtual/libgl, ""]
+    - [PREFERRED_PROVIDER_virtual/mesa, ""]
+    - [PREFERRED_PROVIDER_virtual/libgbm, "libgbm"]
+    - [PREFERRED_PROVIDER_libgbm-dev, "libgbm"]
+    - [BBMASK:append, " mesa-gl"]
+
     # Install some apps to test GPU/Display
     - [IMAGE_INSTALL_append, " glmark2 kmscube"]
 
@@ -127,6 +129,8 @@ common_data:
         rev: "6ed789681c2867c7cae8b0150e093e1e2781797e"
         dir: "proprietary"
     builder:
+      conf:
+        - *GFX_CONF
       layers:
         - "../meta-python2"
         - "../meta-clang"
@@ -722,12 +726,14 @@ parameters:
           domd:
             builder:
               conf:
+                - *GFX_CONF
                 - [XT_PREBUILT_GSX_DIR, "%{XT_PREBUILT_GSX_DIR}"]
               layers:
                 - "../meta-xt-rcar/meta-xt-rcar-gles_common"
           domu:
             builder:
               conf:
+                - *GFX_CONF
                 - [XT_PREBUILT_GSX_DIR, "%{XT_PREBUILT_GSX_DIR}"]
               layers:
                 - "../meta-xt-rcar/meta-xt-rcar-gles_common"
