yaml: create GFX_SOURCES and GFX_LAYERS
This commit divides DDK_SOURCE_OVERRIDES into two chunks:
GFX_SOURCES and GFX_LAYERS.

This change is done as the part of the further separation
of the graphics related code, and to improve alignment of
different yaml files.

Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar-agl.yaml
+++ b/prod-devel-rcar-agl.yaml
@@ -114,28 +114,23 @@ common_data:
     # Install some apps to test GPU/Display
     - [IMAGE_INSTALL_append, " glmark2 kmscube"]
 
-  # The same set of layers and configs is used both in DomD and DomU
-  # to build a DDK from source code
-  ddk_source_overrides: &DDK_SOURCE_OVERRIDES
-    sources:
-      - type: git
-        url: https://git.openembedded.org/meta-python2
-        rev: dunfell
-      - type: git
-        url: https://github.com/kraj/meta-clang.git
-        rev: "3bb001d3f364bbf6588fed04b9ee2c7e74a0beba" # dunfell
-      - type: git
-        url: ssh://git@gitpct.epam.com/epmd-aepr/img-proprietary
-        rev: "6ed789681c2867c7cae8b0150e093e1e2781797e"
-        dir: "proprietary"
-    builder:
-      conf:
-        - *GFX_CONF
-      layers:
-        - "../meta-python2"
-        - "../meta-clang"
-        - "../meta-xt-rcar/meta-xt-rcar-proprietary"
-        - "../meta-xt-rcar/meta-xt-rcar-gles_common"
+  gfx_sources: &GFX_SOURCES
+    - type: git
+      url: https://git.openembedded.org/meta-python2
+      rev: dunfell
+    - type: git
+      url: https://github.com/kraj/meta-clang.git
+      rev: "3bb001d3f364bbf6588fed04b9ee2c7e74a0beba" # dunfell
+    - type: git
+      url: ssh://git@gitpct.epam.com/epmd-aepr/img-proprietary
+      rev: "6ed789681c2867c7cae8b0150e093e1e2781797e"
+      dir: "proprietary"
+
+  gfx_layers: &GFX_LAYERS
+    - "../meta-python2"
+    - "../meta-clang"
+    - "../meta-xt-rcar/meta-xt-rcar-proprietary"
+    - "../meta-xt-rcar/meta-xt-rcar-gles_common"
 
 components:
   dom0:
@@ -753,9 +748,21 @@ parameters:
         # for the linux
         components:
           domd:
-            *DDK_SOURCE_OVERRIDES
+            sources:
+              - *GFX_SOURCES
+            builder:
+              conf:
+                - *GFX_CONF
+              layers:
+                - *GFX_LAYERS
           domu:
-            *DDK_SOURCE_OVERRIDES
+            sources:
+              - *GFX_SOURCES
+            builder:
+              conf:
+                - *GFX_CONF
+              layers:
+                - *GFX_LAYERS
         # for the android
         variables:
           XT_DOMA_DDK_KM_PREBUILT_MODULE: "../%{ANDROID_KERNEL_DIR}/out/android12-5.4/staging/vendor/lib/modules/pvrsrvkm.ko"
