yaml: minor fixes of disalignments
To improve alignment of devel.yaml and virtio.yaml:
- change comment
- change location of text block

Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar-virtio.yaml
+++ b/prod-devel-rcar-virtio.yaml
@@ -767,7 +767,7 @@ parameters:
             builder:
               conf:
                 - *GFX_CONF
-                # gles-um-compile.bb still requires python2
+                # gfx sources still require python2
                 - [I_SWEAR_TO_MIGRATE_TO_PYTHON3, "yes"]
               layers:
                 - *GFX_LAYERS
