dom0: remove `pulseaudio` from DISTRO_FEATURES
There is no need to have pulseaudio in the Dom0.

Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar-virtio.yaml
+++ b/prod-devel-rcar-virtio.yaml
@@ -168,7 +168,7 @@ components:
         # Remove unused DISTRO_FEATURES
         - [DISTRO_FEATURES:remove, "acl alsa argp pcmcia usbgadget
                 usbhost opengl ptest multiarch wayland vulkan
-                sysvinit"]
+                sysvinit pulseaudio"]
 
         # Enable systemd on dom0
         - [INIT_MANAGER, "systemd"]
