doma: add virtual console and serial port configuration
*Add a virtual serial port(/run/gnss-uart) which will be used
by the GNSS emulator from DomD.

*Add 5 virtual console devices(/run/android_vm_virtconsoleX) on which
Android Trout relies. These ports are not used from the DomD side.

Signed-off-by: Andrii Chepurnyi <andrii_chepurnyi@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/doma-vdevices-virtio.cfg
+++ b/meta-xt-prod-devel-rcar-control/recipes-guests/doma/files/doma-vdevices-virtio.cfg
@@ -8,7 +8,8 @@ virtio=[
 'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:03.0, grant_usage=0, backend_type=qemu',
 'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:04.0, grant_usage=0, backend_type=qemu',
 'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:05.0, grant_usage=0, backend_type=qemu',
-'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:06.0, grant_usage=0, backend_type=qemu'
+'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:06.0, grant_usage=0, backend_type=qemu',
+'backend=DomD, type=virtio,device, transport=pci, bdf=0000:00:07.0, grant_usage=0, backend_type=qemu'
 ]
 
 device_model_args=[
@@ -23,6 +24,19 @@ device_model_args=[
 '-device', 'virtio-blk-pci,scsi=off,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=5,drive=image',
 '-drive', 'if=none,id=image,format=raw,file=/dev/STORAGE_PART3',
 '-device', 'vhost-vsock-pci,guest-cid=3,disable-legacy=on,iommu_platform=on,bus=pcie.0,addr=6',
+'-device', 'virtio-serial-pci,disable-legacy=on,iommu_platform=on,addr=7',
+'-chardev','socket,path=/run/android_vm_virtconsole1,server=on,wait=off,id=virts_chardev1',
+'-device','virtconsole,chardev=virts_chardev1,id=virts1',
+'-chardev','socket,path=/run/android_vm_virtconsole2,server=on,wait=off,id=virts_chardev2',
+'-device','virtconsole,chardev=virts_chardev2,id=virts2',
+'-chardev','socket,path=/run/gnss-uart,server=on,wait=off,id=virts_chardev3',
+'-device','virtserialport,chardev=virts_chardev3,id=virts3',
+'-chardev','socket,path=/run/android_vm_virtconsole4,server=on,wait=off,id=virts_chardev4',
+'-device','virtconsole,chardev=virts_chardev4,id=virts4',
+'-chardev','socket,path=/run/android_vm_virtconsole5,server=on,wait=off,id=virts_chardev5',
+'-device','virtconsole,chardev=virts_chardev5,id=virts5',
+'-chardev','socket,path=/run/android_vm_virtconsole6,server=on,wait=off,id=virts_chardev6',
+'-device','virtconsole,chardev=virts_chardev6,id=virts6',
 '-d', 'guest_errors',
 '-monitor', 'telnet:127.0.0.1:1234,server,nowait',
 '-global', 'virtio-mmio.force-legacy=false',
