dom0: add possibility to use DomU without GSX
GSX-related configs are separated and are moved
into gsx-common.cfg.
The SOC-specific GSX options are added at compile time.

The 'gsx' MACHINE_FEATURE is required to generate proper
configuration files for domains.

Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>

--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -700,6 +700,12 @@ parameters:
           XT_DOMA_KERNEL_EXTRA_MODULES: ""
           XT_DOMA_SOURCE_GROUP: "default"
         components:
+          dom0:
+            builder:
+              conf:
+                # this machine feature is required to select proper
+                # configuration for DomU
+                - [MACHINE_FEATURES:append, " gsx"]
           domd:
             builder:
               conf:
@@ -728,6 +734,12 @@ parameters:
       overrides:
         # for the linux
         components:
+          dom0:
+            builder:
+              conf:
+                # this machine feature is required to select proper
+                # configuration for DomU
+                - [MACHINE_FEATURES:append, " gsx"]
           domd:
             sources:
               - *GFX_SOURCES
