--- a/layers/meta-xt-dom0-gen3/recipes-guests/domu/files/domu-vdevices.cfg
+++ b/layers/meta-xt-dom0-gen3/recipes-guests/domu/files/domu-vdevices.cfg
@@ -2,6 +2,8 @@
 # DomU virtual devices
 # =====================================================================
 
+device_tree = "/usr/lib/xen/boot/domu.dtb"
+
 # Note1:
 # In case of using virtio-disk there should be additional properties:
 # "backendtype=standalone, specification=virtio"
@@ -11,21 +13,12 @@
 # https://xenbits.xenproject.org/docs/4.15-testing/man/xl-disk-configuration.5.html
 disk = [ 'backend=DomD, vdev=xvda1, target=/dev/STORAGE_PART3' ]
 
-vgsx = [ 'backend=DomD, osid=1' ]
-
 # We use predefined MAC addresses for domains:
 #  08:00:27:ff:cb:cd - domF
 #  08:00:27:ff:cb:ce - domA
 #  08:00:27:ff:cb:cf - domU
 vif = [ 'backend=DomD, bridge=xenbr0, mac=08:00:27:ff:cb:cf' ]
 
-vdispl = [ 'backend=DomD, be-alloc=0, connectors=1000:1920x1080' ]
-
-# multi-touch-width/height should be equal to physical touchscreen parameters when displ_be runs on top of DRM in DomD,
-# but in both cases (Weston/DRM) multi-touch-num-contacts should also be set properly to match HW
-vkb = [ 'backend=DomD, backend-type=linux, multi-touch-width=1920, multi-touch-height=1080, multi-touch-num-contacts=10, unique-id=T:1000, feature-disable-pointer=1, feature-disable-keyboard=1' ]
-
 vsnd = [[ 'card, backend=DomD, buffer-size=65536, short-name=VCard, long-name=Virtual sound card, sample-rates=8000;11025;16000;22050;32000;44100;48000, sample-formats=s16_le',
           'pcm, name=dev1', 'stream, unique-id=pulse, type=P'
        ]]
-
