yaml: change meta-xt-vhost repository protocol
Switch to using HTTPS instead of SSH. This will allow users without
GitHub registration to clone the repository.

Signed-off-by: Andrii Chepurnyi <andrii_chepurnyi@epam.com>
Acked-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>
Acked-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>

--- a/prod-devel-rcar-virtio.yaml
+++ b/prod-devel-rcar-virtio.yaml
@@ -221,7 +221,7 @@ components:
         url: https://git.yoctoproject.org/meta-selinux
         rev: kirkstone
       - type: git
-        url: ssh://git@github.com/xen-troops/meta-xt-vhost.git
+        url: https://github.com/xen-troops/meta-xt-vhost.git
         rev: main
     builder:
       type: yocto
