domd-gen3: optee: add appends for optee 4.1.0
This patch basically switches OP-TEE for prod-devel-gen3 to version
4.1.0. It relies on new meta-xt-security layer from meta-xt-common.

From now on OP-TEE configuration will be per-product, not
per-platform, as different products on the same platform may have
different OP-TEE configuration.

This patch also removes meta-xt-rcar-domx as it was used only to hold
per-platform OP-TEE recipe.

Signed-off-by: Volodymyr Babchuk <volodymyr_babchuk@epam.com>
Acked-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>

--- a/prod-devel-rcar-virtio.yaml
+++ b/prod-devel-rcar-virtio.yaml
@@ -267,10 +267,10 @@ components:
         - "../meta-xt-common/meta-xt-driver-domain"
         - "../meta-xt-common/meta-xt-driver-domain-virtio"
         - "../meta-xt-common/meta-xt-qemu"
+        - "../meta-xt-common/meta-xt-security"
         - "../meta-xt-rcar/meta-oe-fixups"
         - "../meta-xt-rcar/meta-xt-rcar-fixups"
         - "../meta-xt-rcar/meta-xt-rcar-driver-domain"
-        - "../meta-xt-rcar/meta-xt-rcar-domx"
         - "../meta-xt-prod-devel-rcar/meta-xt-domx-gen3"
         - "../meta-xt-prod-devel-rcar/meta-xt-prod-devel-rcar-driver-domain"
         - "../meta-xt-prod-devel-rcar/meta-xt-domd-gen3"
@@ -395,8 +395,8 @@ components:
         - "cert_header_sa6-4x2g.srec"
         - "cert_header_sa6_emmc.bin"
         - "cert_header_sa6_emmc.srec"
-        - "tee-%{DOMD_MACHINE}.bin"
-        - "tee-%{DOMD_MACHINE}.srec"
+        - "../optee/tee-raw.bin"
+        - "../optee/tee-%{DOMD_MACHINE}.srec"
         - "u-boot-elf-%{DOMD_MACHINE}.srec"
         - "u-boot-%{DOMD_MACHINE}.bin"
 
