Upgrade to the yocto scarthgap
- update LAYERSERIES_COMPAT
- update branches for sources in .yaml files
- change the name of the .ext4 image files

Signed-off-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>

--- a/meta-xt-domd-gen3/conf/layer.conf
+++ b/meta-xt-domd-gen3/conf/layer.conf
@@ -9,4 +9,4 @@ BBFILE_COLLECTIONS += "xt-domd-gen3"
 BBFILE_PATTERN_xt-domd-gen3 := "^${LAYERDIR}/"
 BBFILE_PRIORITY_xt-domd-gen3 = "12"
 
-LAYERSERIES_COMPAT_xt-domd-gen3 = "kirkstone"
+LAYERSERIES_COMPAT_xt-domd-gen3 = "kirkstone scarthgap"
