--- a/meta-xt-domu-gen3/conf/layer.conf
+++ b/meta-xt-domu-gen3/conf/layer.conf
@@ -9,5 +9,5 @@ BBFILE_COLLECTIONS += "xt-domu-gen3"
 BBFILE_PATTERN_xt-domu-gen3 := "^${LAYERDIR}/"
 BBFILE_PRIORITY_xt-domu-gen3 = "12"
 
-LAYERSERIES_COMPAT_xt-domu-gen3 = "kirkstone"
+LAYERSERIES_COMPAT_xt-domu-gen3 = "kirkstone scarthgap"
 
