--- a/meta-xt-domx-gen3/conf/layer.conf
+++ b/meta-xt-domx-gen3/conf/layer.conf
@@ -13,5 +13,5 @@ BBFILE_COLLECTIONS += "xt-domx-gen3"
 BBFILE_PATTERN_xt-domx-gen3 := "^${LAYERDIR}/"
 BBFILE_PRIORITY_xt-domx-gen3 = "12"
 
-LAYERSERIES_COMPAT_xt-domx-gen3 = "kirkstone"
+LAYERSERIES_COMPAT_xt-domx-gen3 = "kirkstone scarthgap"
 
