--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -38,22 +38,22 @@ common_data:
   sources: &COMMON_SOURCES
     - type: git
       url: https://git.yoctoproject.org/poky
-      rev: kirkstone
+      rev: scarthgap
     - type: git
       url: https://git.openembedded.org/meta-openembedded
-      rev: kirkstone
+      rev: scarthgap
     - type: git
       url: https://git.yoctoproject.org/meta-virtualization
-      rev: kirkstone
+      rev: scarthgap
     - type: git
-      url: https://github.com/xen-troops/meta-xt-common.git
-      rev: master
+      url: https://github.com/rshym/meta-xt-common.git
+      rev: mr_ivi
     - type: git
-      url: https://github.com/xen-troops/meta-xt-rcar.git
-      rev: master
+      url: https://github.com/rshym/meta-xt-rcar.git
+      rev: mr_scarthgap
     - type: git
-      url: https://github.com/xen-troops/meta-xt-prod-devel-rcar.git
-      rev: master
+      url: https://github.com/rshym/meta-xt-prod-devel-rcar.git
+      rev: mr_scarthgap
   # Common configuration options for all yocto-based domains
   conf: &COMMON_CONF
     - [SSTATE_DIR, "${TOPDIR}/../../../common_data/sstate"]
@@ -207,10 +207,10 @@ components:
       - *COMMON_SOURCES
       - type: git
         url: https://github.com/renesas-rcar/meta-renesas.git
-        rev: kirkstone-dev
+        rev: scarthgap-dev
       - type: git
         url: https://git.yoctoproject.org/meta-selinux
-        rev: kirkstone
+        rev: scarthgap
     builder:
       type: yocto
       work_dir: "%{DOMD_BUILD_DIR}"
@@ -259,7 +259,7 @@ components:
         - "tmp/deploy/images/%{DOMD_MACHINE}/xen-%{DOMD_MACHINE}.uImage"
         - "tmp/deploy/images/%{DOMD_MACHINE}/xenpolicy-%{DOMD_MACHINE}"
         - "tmp/deploy/images/%{DOMD_MACHINE}/%{XT_XEN_DTB_NAME}"
-        - "tmp/deploy/images/%{DOMD_MACHINE}/%{BUILD_TARGET_DOMD}-%{DOMD_MACHINE}.ext4"
+        - "tmp/deploy/images/%{DOMD_MACHINE}/%{BUILD_TARGET_DOMD}-%{DOMD_MACHINE}.rootfs.ext4"
 
   domu:
     build-dir: "%{YOCTOS_WORK_DIR}"
@@ -267,7 +267,7 @@ components:
       - *COMMON_SOURCES
       - type: git
         url: https://github.com/renesas-rcar/meta-renesas.git
-        rev: kirkstone-dev
+        rev: scarthgap-dev
     builder:
       type: yocto
       work_dir: "%{DOMU_BUILD_DIR}"
@@ -295,7 +295,7 @@ components:
       build_target: "%{BUILD_TARGET_DOMU}"
       target_images:
         - "tmp/deploy/images/%{DOMU_MACHINE}/Image"
-        - "tmp/deploy/images/%{DOMU_MACHINE}/%{BUILD_TARGET_DOMU}-%{DOMU_MACHINE}.ext4"
+        - "tmp/deploy/images/%{DOMU_MACHINE}/%{BUILD_TARGET_DOMU}-%{DOMU_MACHINE}.rootfs.ext4"
 
   doma_kernel:
     build-dir: "%{ANDROID_KERNEL_DIR}"
@@ -396,7 +396,7 @@ images:
       domd_rootfs:
         gpt_type: B921B045-1DF0-41C3-AF44-4C6F280D3FAE # Linux aarch64 root
         type: raw_image
-        image_path: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/%{BUILD_TARGET_DOMD}-%{DOMD_MACHINE}.ext4"
+        image_path: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/%{BUILD_TARGET_DOMD}-%{DOMD_MACHINE}.rootfs.ext4"
 
 parameters:
   # Machines
@@ -598,7 +598,7 @@ parameters:
               domu-rootfs:
                 type: raw_image
                 gpt_type: 0FC63DAF-8483-4772-8E79-3D69D8477DE4 # Linux filesystem data
-                image_path: "%{YOCTOS_WORK_DIR}/%{DOMU_BUILD_DIR}/tmp/deploy/images/%{DOMU_MACHINE}/%{BUILD_TARGET_DOMU}-%{DOMU_MACHINE}.ext4"
+                image_path: "%{YOCTOS_WORK_DIR}/%{DOMU_BUILD_DIR}/tmp/deploy/images/%{DOMU_MACHINE}/%{BUILD_TARGET_DOMU}-%{DOMU_MACHINE}.rootfs.ext4"
 
   ENABLE_ZEPHYR:
     desc: "Build Zephyr as guest domain"
