--- a/prod-devel-rcar.yaml
+++ b/prod-devel-rcar.yaml
@@ -51,9 +51,6 @@ common_data:
     - type: git
       url: https://github.com/xen-troops/meta-xt-rcar.git
       rev: master
-    - type: git
-      url: https://github.com/xen-troops/meta-xt-prod-devel-rcar.git
-      rev: master
   # Common configuration options for all yocto-based domains
   conf: &COMMON_CONF
     - [SSTATE_DIR, "${TOPDIR}/../../../common_data/sstate"]
@@ -190,8 +187,8 @@ components:
         - "../meta-xt-common/meta-xt-dom0"
         - "../meta-xt-common/meta-xt-control-domain"
         - "../meta-xt-rcar/meta-xt-rcar-dom0"
-        - "../meta-xt-prod-devel-rcar/meta-xt-domx-gen3"
-        - "../meta-xt-prod-devel-rcar/meta-xt-prod-devel-rcar-control"
+        - "../../meta-xt-prod-devel-rcar/meta-xt-domx-gen3"
+        - "../../meta-xt-prod-devel-rcar/meta-xt-prod-devel-rcar-control"
       build_target: core-image-thin-initramfs
       external_src:
         domd: "%{YOCTOS_WORK_DIR}/%{DOMD_BUILD_DIR}/tmp/deploy/images/%{DOMD_MACHINE}/"
@@ -251,9 +248,9 @@ components:
         - "../meta-xt-rcar/meta-oe-fixups"
         - "../meta-xt-rcar/meta-xt-rcar-fixups"
         - "../meta-xt-rcar/meta-xt-rcar-driver-domain"
-        - "../meta-xt-prod-devel-rcar/meta-xt-domx-gen3"
-        - "../meta-xt-prod-devel-rcar/meta-xt-prod-devel-rcar-driver-domain"
-        - "../meta-xt-prod-devel-rcar/meta-xt-domd-gen3"
+        - "../../meta-xt-prod-devel-rcar/meta-xt-domx-gen3"
+        - "../../meta-xt-prod-devel-rcar/meta-xt-prod-devel-rcar-driver-domain"
+        - "../../meta-xt-prod-devel-rcar/meta-xt-domd-gen3"
       target_images:
         - "tmp/deploy/images/%{DOMD_MACHINE}/Image"
         - "tmp/deploy/images/%{DOMD_MACHINE}/xen-%{DOMD_MACHINE}.uImage"
@@ -290,8 +287,8 @@ components:
         - "../meta-xt-common/meta-xt-domu"
         - "../meta-xt-rcar/meta-xt-rcar-fixups"
         - "../meta-xt-rcar/meta-xt-rcar-domu"
-        - "../meta-xt-prod-devel-rcar/meta-xt-domx-gen3"
-        - "../meta-xt-prod-devel-rcar/meta-xt-domu-gen3"
+        - "../../meta-xt-prod-devel-rcar/meta-xt-domx-gen3"
+        - "../../meta-xt-prod-devel-rcar/meta-xt-domu-gen3"
       build_target: "%{BUILD_TARGET_DOMU}"
       target_images:
         - "tmp/deploy/images/%{DOMU_MACHINE}/Image"
