--- a/prod-devel-rcar-virtio.yaml
+++ b/prod-devel-rcar-virtio.yaml
@@ -1,5 +1,5 @@
 desc: "Xen-Troops development setup for Renesas RCAR Gen3 hardware"
-min_ver: "0.20"
+min_ver: "0.27"
 
 variables:
   YOCTOS_WORK_DIR: "yocto"
@@ -545,6 +545,7 @@ parameters:
                 gpt_type: 49A4D17F-93A3-45C1-A0DE-F50B2EBE2599 # Android boot 1
                 type: raw_image
                 size: 70 MiB
+                resize: false
                 image_path: "%{DOMA_DIR}/out/target/product/%{ANDROID_DEVICE}/boot.img"
               boot_b:
                 gpt_type: 20117F86-E985-4357-B9EE-374BC1D8487D # Android boot 2
@@ -554,6 +555,7 @@ parameters:
                 gpt_type: DF24E5ED-8C96-4B86-B00B-79667DC6DE11 # Android sparse 1
                 type: raw_image
                 size: 70 MiB
+                resize: false
                 image_path: "%{DOMA_DIR}/out/target/product/%{ANDROID_DEVICE}/vendor_boot.img"
               vendor_boot_b:
                 gpt_type: 7C29D3AD-78B9-452E-9DEB-D098D542F092 # Android sparse 2
@@ -563,6 +565,7 @@ parameters:
                 gpt_type: 19A710A2-B3CA-11E4-B026-10604B889DCF # Android meta
                 type: raw_image
                 size: 1 MiB
+                resize: false
                 image_path: "%{DOMA_DIR}/out/target/product/%{ANDROID_DEVICE}/vbmeta.img"
               vbmeta_b:
                 gpt_type: 19A710A2-B3CA-11E4-B026-10604B889DCF # Android meta
@@ -572,6 +575,7 @@ parameters:
                 gpt_type: E7C06570-9FDC-11E8-8C15-0A580A200C13 # Android meta
                 type: raw_image
                 size: 1 MiB
+                resize: false
                 image_path: "%{DOMA_DIR}/out/target/product/%{ANDROID_DEVICE}/vbmeta_system.img"
               vbmeta_system_b:
                 gpt_type: E7C06570-9FDC-11E8-8C15-0A580A200C13 # Android meta
